Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/Field_Inventory__c.object-meta.xml
<CustomObject>
    <description>This is the main field instrument or system record. Linked to this record may be one or more related items which make up the entire package or system.</description>
    <label>Field Inventory</label>
    <nameField>
        <label>Field Inventory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>