Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consignment</label>
    <type>Checkbox</type>
</CustomField>