Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>