Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N30000000rM6NEAU</relationshipName>
    <type>Lookup</type>
</CustomField>