Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Date_Sold__c.field-meta.xml
<CustomField>
    <fullName>Date_Sold__c</fullName>
    <label>Date Sold</label>
    <type>Date</type>
</CustomField>