Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Date_Transfered__c.field-meta.xml
<CustomField>
    <fullName>Date_Transfered__c</fullName>
    <label>Date Transfered</label>
    <type>Date</type>
</CustomField>