Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Item_Tag__c.field-meta.xml
<CustomField>
    <fullName>Item_Tag__c</fullName>
    <label>Item Tag</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>