Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <length>15</length>
    <type>Text</type>
</CustomField>