Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA13</fullName>
            </value>
            <value>
                <fullName>US13</fullName>
            </value>
            <value>
                <fullName>1BE3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>