Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NORTH AMERICA</fullName>
            </value>
            <value>
                <fullName>NAAS West</fullName>
            </value>
            <value>
                <fullName>LA South</fullName>
            </value>
            <value>
                <fullName>LA North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>