Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA10 ANALYTICAL</fullName>
            </value>
            <value>
                <fullName>US10 NorthEast</fullName>
            </value>
            <value>
                <fullName>US10 MidAtlantic</fullName>
            </value>
            <value>
                <fullName>US10 South</fullName>
            </value>
            <value>
                <fullName>US10 MidWest</fullName>
            </value>
            <value>
                <fullName>US10 West</fullName>
            </value>
            <value>
                <fullName>CA10 LST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>