Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Special_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Special_Sell_Price__c</fullName>
    <label>Special Sell Price</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>