Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet For Sale</fullName>
            </value>
            <value>
                <fullName>Available for Sale</fullName>
            </value>
            <value>
                <fullName>Customer Site</fullName>
            </value>
            <value>
                <fullName>Requires Service</fullName>
            </value>
            <value>
                <fullName>Sold - Shipped</fullName>
            </value>
            <value>
                <fullName>Sold - Pending Shipment</fullName>
            </value>
            <value>
                <fullName>On Order</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
            </value>
            <value>
                <fullName>Relieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>