Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/System_List_Price__c.field-meta.xml
<CustomField>
    <fullName>System_List_Price__c</fullName>
    <label>System List Price</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>