Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Pac Rim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>