Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <formula>if(ispickval( Type__c,&quot;DEMO&quot;),&quot;INSTALL AND WARRANTY INCLUDED&quot;,&quot;MUST QUOTE SEPARATE INSTALL AND WARRANTY&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty</label>
    <type>Text</type>
</CustomField>