Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/fields/xDiscounted_Price__c.field-meta.xml
<CustomField>
    <fullName>xDiscounted_Price__c</fullName>
    <formula>if(Age_in_Months__c &lt; 6, System_List_Price__c ,
if(Age_in_Months__c &lt;19, round((System_List_Price__c * (1-Age_in_Months__c *0.015)),0),
if(Age_in_Months__c &lt;25, round((System_List_Price__c * (1-Age_in_Months__c *0.02)),0),
round((System_List_Price__c *0.52),0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xDiscounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>