Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/listViews/AnalyticalUS13AvailableInventory.listView-meta.xml
<ListView>
    <fullName>AnalyticalUS13AvailableInventory</fullName>
    <columns>Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Current_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plant__c</field>
        <operation>equals</operation>
        <value>US13</value>
    </filters>
    <filters>
        <field>Marketing_Business_Unit__c</field>
        <operation>equals</operation>
        <value>ANALYTICAL SCIENCES</value>
    </filters>
    <filters>
        <field>Date_Sold__c</field>
        <operation>equals</operation>
    </filters>
    <label>Analytical-US13-Available Inventory</label>
    <language>en_US</language>
</ListView>