Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/listViews/CA13InventoryWong.listView-meta.xml
<ListView>
    <fullName>CA13InventoryWong</fullName>
    <columns>Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>SAP_Order__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>User__c</columns>
    <columns>Current_Location__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Date_Returned__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Date_Sold__c</columns>
    <columns>Date_Transfered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Wong</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Sold - Shipped,Not Found,Relieved</value>
    </filters>
    <filters>
        <field>Marketing_Business_Unit__c</field>
        <operation>equals</operation>
        <value>ANALYTICAL SCIENCES</value>
    </filters>
    <filters>
        <field>Plant__c</field>
        <operation>equals</operation>
        <value>CA13</value>
    </filters>
    <label>CA13 - AS Inventory - IR UVS TEA - Wong</label>
    <language>en_US</language>
    <sharedTo>
        <group>ARQ_000758</group>
        <group>ARQ_000864</group>
    </sharedTo>
</ListView>