Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/listViews/CA13SoldDemoInventory.listView-meta.xml
<ListView>
    <fullName>CA13SoldDemoInventory</fullName>
    <columns>Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>Date_Sold__c</columns>
    <columns>ShipTo_Name__c</columns>
    <columns>Customer_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plant__c</field>
        <operation>equals</operation>
        <value>CA13</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sold - Shipped,Sold - Pending Shipment,Not Found,Relieved</value>
    </filters>
    <filters>
        <field>Marketing_Business_Unit__c</field>
        <operation>equals</operation>
        <value>ANALYTICAL SCIENCES</value>
    </filters>
    <label>CA13 - AS Inventory - SOLD</label>
    <language>en_US</language>
    <sharedTo>
        <group>ARQ_000758</group>
        <group>ARQ_000864</group>
    </sharedTo>
</ListView>