Perkin-UAT/force-app/main/default/objects/Field_Inventory__c/listViews/Field_Inventory_ALL.listView-meta.xml
<ListView>
    <fullName>Field_Inventory_ALL</fullName>
    <columns>NAME</columns>
    <columns>Current_Location__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Date_Sent__c</columns>
    <columns>Status__c</columns>
    <columns>ShipTo_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Serial_Number__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Field Inventory ALL</label>
    <language>en_US</language>
</ListView>